bump Java24